--- a/analysis/manuscript.tex
+++ b/analysis/manuscript.tex
@@ -721,7 +721,7 @@ Planck Society with Springer Compact.
 
 }
 
-\caption{Development of open access in hybrid journals in transformative agreements between 2018 and 2022, by the Top 20 most productive countries in terms of total articles published in the five-years period. Blue areas represent open access through transformative agreements, the grey areas depict open access articles where no link to an agreement could be established. Country names are represented as ISO two-letter country codes}\label{fig:country_top_20_plot}
+\caption{Development of open access in hybrid journals in transformative agreements between 2018 and 2022, by the Top 20 most productive countries in terms of total articles published in the five-years period. Blue areas represent open access through transformative agreements, the grey areas depict open access articles where no link to an agreement could be established. Country names are represented as ISO two-letter country codes. Facet subheadings show the total number of articles and corresponding market share.}\label{fig:country_top_20_plot}
 \end{figure}
 
 Since 2021, there has been a general trend towards hybrid open access
