Drafting abstract and declarations

--- a/analysis/manuscript.tex
+++ b/analysis/manuscript.tex
@@ -46,9 +46,11 @@ Platz der Göttinger Sieben 1, 37073 Göttingen, Germany\\
 najko.jahn@sub.uni-goettingen.de
 }
 
-%\authornote{Correspondence concerning this article should be addressed to Najko Jahn}
+\authornote{ORCID: https://orcid.org/0000-0001-5105-1463}
 
-\abstract{}
+\abstract{Ongoing controversies surrounding transformative agreements as a means of transitioning journal publishing to full open access highlight the need for large-scale studies assessing the adoption of open access in hybrid journals, including the extent to which transformative agreements contributed to it. Combining publicly available data from various sources, including cOAlition S Journal Checker, Crossref, and OpenAlex, this study presents a novel approach that leverages metadata from over 700 agreements and nine million journal articles.  Estimates suggest a strong growth in open access between 2018 and 2022 from 4.3\% to 15\%. In 2022, 58\% of open access articles could be attributed to transformative agreements. Growth can be largely attributed to three large commercial publishers: Elsevier, Springer Nature, and Wiley, but it varies substantially across journals, publishers, disciplines, and country affiliations. These estimates indicate that the current level of implementation of transformative agreements is insufficient to bring about a large-scale transition to full open access. In particular, different developments in the OECD and BRICS areas have the potential to hinder the transition of academic journal publishing. These findings are important for researchers and stakeholders engaged in negotiating and evaluating these agreements.}
+
+\keywords{hybrid open access, transformative agreements, scholarly publishing, big deals, bibliometrics}
 
 \begin{document}
 \maketitle
@@ -904,6 +906,23 @@ presented approach relies on open data, which enables follow-up studies
 and open access monitoring activities to further explore the role of
 transformative agreements in transitioning academic publishing to full
 open access.
+
+\hypertarget{competing-interests}{%
+\section{Competing interests}\label{competing-interests}}
+
+The author declares no competing interests.
+
+\hypertarget{funding-information}{%
+\section{Funding information}\label{funding-information}}
+
+This work was supported by the Deutsche Forschungsgemeinschaft (Grant
+number 416115939).
+
+\hypertarget{data-and-code-availability}{%
+\section{Data and code availability}\label{data-and-code-availability}}
+
+Source code analysis including data used is available on GitHub:
+\url{https://github.com/njahn82/hoa_ta_effects}.
 
 \hypertarget{references}{%
 \section*{References}\label{references}}
