--- a/analysis/manuscript.Rmd
+++ b/analysis/manuscript.Rmd
@@ -52,6 +52,8 @@ ta_oa_inst <- readr::read_csv(here::here("data", "ta_oa_inst.csv.gz"))
 
 ```
 
+
+
 # Introduction
 
 For over two decades, hybrid open access journal publishing, which makes some articles openly available while others remain behind a paywall, has been discussed as a means for transitioning the subscription system to full open access [@Prosser_2003].
@@ -205,7 +207,8 @@ The largest differences concerned articles published between 2018 and 2020.
 In 2022, however, Crossref and OpenAlex open access numbers differ only slightly (`r hoaddata::cr_upw |> filter(cr_year %in% 2022, cat == "Global", issn_l != "0027-8424") |> distinct(issn_l, cr_year, cr_hybrid_total) |> pull(cr_hybrid_total) |> sum()` records using Crossref vs. `r hoaddata::cr_upw |> filter(cr_year %in% 2022, cat == "Global", issn_l != "0027-8424") |> distinct(issn_l, cr_year, upw_hybrid_total) |> pull(upw_hybrid_total) |> sum()` in OpenAlex).
 Notable differences could be observed among some publishers that presumably did not provide CC license information to Crossref, including AIP Publishing, the American Physiological Society, Emerald, and the Royal Society.
 Crossref license metadata was more complete with regard to the articles published by Wiley and the American Chemical Society.
-Finally, inconsistent open access status information in previous OpenAlex versions was observed [@jahn2023]. After reporting this to OpenAlex, fixing this issue was still ongoing according to the release notes, which might also explain part of the discrepancy.
+Finally, inconsistent open access status information in previous OpenAlex versions was observed [@jahn2023]. 
+After reporting this to OpenAlex, fixing this issue was still ongoing according to the release notes, which might also explain part of the discrepancy.
 
 After retrieving the article metadata, the publication volume, including open access, was calculated for each journal. 
 To improve the identification of hybrid journals, journals with an open access proportion above 95% were excluded.
@@ -1493,6 +1496,18 @@ To improve the assessment of transformative agreements, libraries and publishers
 In summary, this study provides empirical insights into the development of hybrid open access following the introduction of transformative agreements. 
 These results are important for both researchers and stakeholders engaged in negotiating and evaluating these agreements. 
 The presented approach relies on open data, which enables follow-up studies and open access monitoring activities to further explore the role of transformative agreements in transitioning academic publishing to full open access.
+
+# Competing interests
+
+The author declares no competing interests. 
+
+# Funding information
+
+This work was supported by the Deutsche Forschungsgemeinschaft (Grant number 416115939). 
+
+# Data and code availability
+
+Source code analysis including data used is available on GitHub: <https://github.com/njahn82/hoa_ta_effects>.
 
 # References 
 
